# odroid-indi-roof

./: LICENSE  README.md
indi-driver/: build.sh
indi-driver/indi-odroid/: CMakeLists.txt  indi_roof_odroid.xml  odroidroof.cpp  odroidroof.h
indi-driver/odroid-indi-roof/: CMakeLists.txt  long.fits  odroid_indi_roof.xml  odroidroof.cpp  odroidroof.h  short.fits
switches-read-test/: check-roof  check-roof.c  read-front  read-front.c  read-rear  read-rear.c
